add logo and headline

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World!
+<!DOCTYPE html>
+<html class="uk-height-1-1">
+<head>
+    <title>Monsieur X</title>
+    <link rel="stylesheet" href="css/uikit.min.css" />
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="js/uikit.min.js"></script>
+</head>
+
+<body class="uk-height-1-1">
+    <div class="uk-vertical-align uk-height-1-1 uk-text-center">
+        <div class="uk-container uk-container-center uk-vertical-align-middle" style="max-width: 400px;">
+            <img src="monsieur-x.svg">
+            <h1>Monsieur X</h1>
+        </div>
+    </div>
+</body>
+</html>
