--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/uikit.min.js"></script>
 </head>
 
-<body class="uk-height-1-1">
+<body class="uk-height-1-1 uk-cover-background" style="background-image: url('map-blurred.jpg');">
     <div class="uk-vertical-align uk-height-1-1 uk-text-center">
         <div class="uk-container uk-container-center uk-vertical-align-middle" style="max-width: 400px;">
             <img src="monsieur-x.svg">
